@@ -1,7 +1,10 @@
-<html>
-<html>
+<!DOCTYPE html
+     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><title>$_("Damned Lies about Gnome")</title>
   <link rel="stylesheet" href="data/main.css"/>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
 #if $rtl
 <body dir="rtl">
@@ -13,8 +16,7 @@
 #end if
 #end if
 
-<center>
-<div style="width:80%; text-align: left;">
+<div class="mainpage">
 
 <h1>$_("Damned Lies about Gnome")</h1>
 
@@ -33,7 +35,7 @@
 
 </td></tr><tr><td valign="top">
 
-<h2><a href=\"releases/\">$_("Release Sets")</a></h2>
+<h2><a href="releases/">$_("Release Sets")</a></h2>
 <p>$_("List of all Gnome release sets and releases we gather stats for.")</p>
 
 <p>$_("Examples of release sets are \"Gnome Office\", \"Fifth Toe\" or \"Gnome 2.14\".")
@@ -50,5 +52,5 @@
 
 </td></tr></table>
 
-</div></center>
+</div>
 </body></html>
