@@ -1,5 +1,10 @@
 2007-02-05  David Lodge <dave@cirt.net>
 
+	* data/main.css: Cleared up remaining warnings, added mainpage class
+	* templates/index.tmpl: Made XHTML valid
+
+2007-02-05  David Lodge <dave@cirt.net>
+
 	* data/main.css: Backed out the change until we can work out why diffs are showing up in the css file.
 
 2007-02-05  David Lodge <dave@cirt.net>
